@@ -1,6 +1,12 @@
 2008-12-12  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c
+	(bacon_video_widget_new): Don't read visuals settings
+	from GConf, that's the job of the front-end
+
+2008-12-12  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c
 	(bacon_video_widget_motion_notify): Don't eat motion
 	notify events, the xine-lib backend never did, and that's
 	unneeded
